# divide-and-surrender

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Manifest.toml  README.md  attack_stats.jl  collect_division_thoughput_data.sh  collect_simulation_data.sh  operand_latency_analysis.jl  plot_trace.jl  precomputation_128.json  pyproject.toml  recoverable_keys.jl  requirements.txt
data/: 0.005.csv  0.05.csv  0.1.csv  0.485.csv  accuracy.csv  additional_bits_100.csv  additional_bits_1000.csv  additional_bits_1500.csv  additional_bits_2000.csv  additional_bits_2500.csv  additional_bits_2750.csv  additional_bits_2875.csv  additional_bits_3000.csv  additional_bits_3062.csv  additional_bits_3125.csv  additional_bits_3250.csv  additional_bits_3500.csv  additional_bits_4000.csv  additional_bits_4500.csv  additional_bits_5.csv  additional_bits_500.csv  additional_bits_5000.csv  additional_bits_5500.csv  additional_bits_6000.csv  additional_bits_6500.csv  additional_bits_7000.csv  ideal.csv  perfect.csv  smt.csv
liboqs-rust/oqs/: Cargo.toml
liboqs-rust/oqs-sys/: Cargo.toml  build.rs
liboqs-rust/oqs-sys/liboqs/: CMakeLists.txt
liboqs-rust/oqs-sys/liboqs/.CMake/: alg_support.cmake
liboqs-rust/oqs-sys/liboqs/scripts/copy_from_upstream/: requirements.txt
liboqs-rust/oqs-sys/liboqs/src/: CMakeLists.txt  oqsconfig.h.cmake
liboqs-rust/oqs-sys/liboqs/src/kem/: kem.c  kem.h
liboqs-rust/oqs-sys/liboqs/src/kem/hqc/: CMakeLists.txt  (+4 more)
liboqs-rust/oqs/src/: kem.rs  macros.rs
nanoBench_configs/: amd.txt  intel.txt
src/: hqc.rs  main.rs  util.rs
visualize/: plot.py
(+118 files in other folders)
